--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ nav {
     width: 100%;
     top: 0;
     left: 0;
-    background-color: #b3a3e0;
+    background-color: #8C6AA2;
     padding: 10px 0;
     z-index: 1000;
     transition: background-color 0.3s ease;
@@ -33,7 +33,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: white;
+    color: #F9E1E3;
     text-decoration: none;
     padding: 10px 15px;
     font-size: 18px;
@@ -41,46 +41,81 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: #bedfc0;
-    color: black;
+    background-color: #4B3679;
+    color: #CD9FCC;
     border-radius: 5px;
 }
 
 nav.scrolled {
-    background-color: #da85d5;
+    background-color: #0A014F;
+    color: #F9E1E3;
 }
+
 
 /* Section Styles */
 section {
     padding: 100px;
     text-align: center;
+    height: 100vh;
+    padding: 50px 20px;
+    justify-content: center;
+    align-items: center;
+    padding: 200px;
+    text-align: center;
 }
 
 #home {
-    height: 100vh;
-    background-color: #f5de6f;
+    background-color: #D9B1C9;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#services, #about, #contact {
-    height: 100vh;
-    background-color: #eaeaea;
-    padding: 50px 20px;
 }
 
 #services {
-    background-color: #cce5ff;
+    background-color: #E4C2C6;
+    text-align: left;
 }
 
 #about {
-    background-color: #d4edda;
+    background-color: #EDC6C8;
+    text-align: justify;
 }
 
 #contact {
-    background-color: #f8d7da;
+    background-color: #F6CACA;
+    text-align: right;
+        width: auto; /* Set the width of the container */
+        margin: 0 auto; /* Center the container horizontally */
+        text-align: right; /* Left-align the text within the container */
+        border: 1px solid #ccc; /* Optional, adds a border around the container */
+        padding: 200px; /* Adds padding inside the container */
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional, adds a shadow for aesthetics */
+}
+
+#faq {
+    background-color: #F8D9DB;
+}
+
+button {
+    background-color: #8C6AA2;
+    color: black;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    display: inline-block;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #E4C2C6;
+}
+
+.quesans {
+    width: 60%; /* Set the width of the container */
+    margin: 0 auto; /* Center the container horizontally */
+    text-align: left; /* Left-align the text within the container */
+    border: 1px solid #ccc; /* Optional, adds a border around the container */
+    padding: 20px; /* Adds padding inside the container */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional, adds a shadow for aesthetics */
 }
 
 /* Responsive Design */
